k8s/blueprints/kratos/ciliumnetworkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kratos
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/component: kratos
      k8s:app.kubernetes.io/instance: kratos
      k8s:app.kubernetes.io/managed-by: Kustomize
      k8s:app.kubernetes.io/name: kratos
      k8s:app.kubernetes.io/part-of: kratos
      k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: auth
      k8s:io.kubernetes.pod.namespace: auth
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: oathkeeper
            k8s:io.kubernetes.pod.namespace: auth
      toPorts:
        - ports:
            - port: "4434"
              protocol: TCP
          rules:
            http: [{}]
    - fromEntities:
        - all
      toPorts:
        - ports:
            - port: "4433"
              protocol: TCP
          rules:
            http: [{}]
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: victoria-metrics-k8s-stack
            k8s:app.kubernetes.io/name: vmagent
            k8s:io.cilium.k8s.policy.serviceaccount: vmagent-victoria-metrics-k8s-stack
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "4434"
              protocol: TCP
          rules:
            http: [{}]
        - ports:
            - port: "4435"
              protocol: TCP
          rules:
            http: [{}]
